[package]
name = "ssh_jumper"
version = "0.3.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Async SSH tunnel through a jump host."
repository = "https://github.com/azriel91/ssh_jumper"
documentation = "https://docs.rs/ssh_jumper/"
readme = "../../README.md"
keywords = ["ssh", "tunnel", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
async-io = "1.4.1"
async-ssh2-lite = "0.2.1"
async-std-resolver = "0.20.3"
futures = "0.3.15"
plain_path = "0.1.0"
ssh_jumper_model = { version = "0.3.0", path = "../ssh_jumper_model" }
tokio = { version = "1.6.1", features = ["rt", "sync"] }

[dev-dependencies]
libssh-sys-dylib = "0.1.0"
