[package]
name = "ssh_jumper"
version = "0.5.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Async SSH tunnel through a jump host."
repository = "https://github.com/azriel91/ssh_jumper"
documentation = "https://docs.rs/ssh_jumper/"
readme = "../../README.md"
keywords = ["ssh", "tunnel", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
async-io = "1.7.0"
async-ssh2-lite = { version = "0.3.0", features = ["async-io"] }
async-std-resolver = "0.21.2"
futures = "0.3.21"
plain_path = "0.1.0"
ssh_jumper_model = { version = "0.5.0", path = "../ssh_jumper_model" }
tokio = { version = "1.19.2", features = ["rt", "sync"] }

[dev-dependencies]
libc = "0.2.126"
libssh-sys-dylib = "0.1.0"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "sync", "net"] }
