[package]
name = "ssh_jumper"
version = "0.5.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Async SSH tunnel through a jump host."
repository = "https://github.com/azriel91/ssh_jumper"
documentation = "https://docs.rs/ssh_jumper/"
readme = "../../README.md"
keywords = ["ssh", "tunnel", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
async-io = "1.12.0"
async-ssh2-lite = { version = "0.4.1", features = ["async-io"] }
async-std-resolver = "0.22.0"
futures = "0.3.25"
plain_path = "0.1.0"
ssh_jumper_model = { version = "0.5.0", path = "../ssh_jumper_model" }
tokio = { version = "1.23.0", features = ["rt", "sync"] }

[dev-dependencies]
libc = "0.2.139"
libssh-sys-dylib = "0.1.0"
tokio = { version = "1.23.0", features = ["rt", "rt-multi-thread", "sync", "net"] }
