[package]
name = "ssh_jumper_model"
version = "0.1.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Async SSH tunnel through a jump host (data types)."
repository = "https://github.com/azriel91/ssh_jumper/crate/ssh_jumper_model"
documentation = "https://docs.rs/ssh_jumper_model/"
readme = "../../README.md"
keywords = ["ssh", "tunnel", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
async-ssh2-lite = "0.2.1"
async-std-resolver = "0.20.0"
plain_path = "0.1.0"
tokio = { version = "1.3.0", features = ["rt"] }
