[package]
name = "ssh_jumper_model"
version = "0.5.0"
authors = ["Azriel Hoh <azriel91@gmail.com>"]
edition = "2018"
description = "Async SSH tunnel through a jump host (data types)."
repository = "https://github.com/azriel91/ssh_jumper/crate/ssh_jumper_model"
documentation = "https://docs.rs/ssh_jumper_model/"
readme = "../../README.md"
keywords = ["ssh", "tunnel", "async"]
license = "MIT OR Apache-2.0"

[dependencies]
async-ssh2-lite = { version = "0.4.1", features = ["async-io"] }
async-std-resolver = "0.22.0"
plain_path = "0.1.0"
tokio = { version = "1.23.0", features = ["rt"] }
